@@ -6,6 +6,8 @@
       type="text/css"
     />
     <link rel="shortcut icon" href="./propriedades/images/favicon.ico" type="image/x-icon">
+    <script src="./js/geral.js"></script>
+    <script src="./js/login.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
@@ -48,7 +50,7 @@
             />
           </div>
           <div style="padding-top: 3px">
-            <button type="submit" style="width: 65px;height: 30px;">OK</button>
+            <button onclick="logar()" style="width: 65px;height: 30px;">OK</button>
           </div>
         </fieldset>
         <div style="text-align: center">
