@@ -36,18 +36,18 @@
             </div>
             <div class="cdst_inputs">
                     <div class="laabel">
-                        <label for="nome" >NOME: </label><br>
-                        <input id="nome" type="text" 
+                        <label for="user_name" >NOME: </label><br>
+                        <input id="user_name" type="text" 
                         placeholder="Informe seu nome completo"
                         >
                     </div>    
                     <div class="laabel">
-                        <label for="mail">E-MAIL:</label><br>
-                        <input id="mail" type="email" 
+                        <label for="user_address">E-MAIL:</label><br>
+                        <input id="user_address" type="email" 
                             placeholder="Informe seu e-mail">
                     </div>
                     <div class="buttonal">
-                        <button onclick="salvarUsuario()">Enviar</button>
+                        <button id="cdst_bot" onclick="salvarUsuario()">Enviar</button>
                     </div>
             </div>
         
