@@ -1,20 +1,0 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <title>Questionário</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="../../js/geral.js"></script>
-    <script src="../../js/questionario.js"></script>
-    <link rel="stylesheet" href="../../css/questionario.css" />
-  </head>
-  <body onload="carregarLogin();listarQuestao();">
-    <div id="bar">
-      <div id="botao-logout" class="botao" onclick="logout()">Logout</div>
-    </div>
-    <div class="box">
-      <h3>Questões</h3>
-      <div id="saida"></div>
-    </div>
-  </body>
-</html>
