@@ -56,10 +56,9 @@ main{
     background: white;
     border-radius: 0 20px 0 0;
 }
-
 .cdst_inputs{
   flex: 1 1 300;  
-  width: 32%;
+  width:fit-content;
   margin-left: auto;
   margin-right: auto;
 }
