@@ -25,3 +25,7 @@ feito anteriormente por mim e Nicolas Aquino porém upado no repositório "Nicka
 para ser usado como modelo para criação das páginas.
 
 17/04 - Claudio P. - alterado o texto e alterações do layout da página de login
+
+23/04 - Claudio S. - junção com sistema js, para acessar o banco de dados; teste de server.
+
+24/04- Claudio S.  - Pagina de questôes; finalização e teste de login.,
